--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
+    "@tsed/multipartfiles": "^5.65.9",
     "@types/color": "^3.0.3",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/validator": "^13.7.7",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
     "typescript": "^4.8.2",
     "validator": "^13.7.0"
   }
