--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
+    "password-validator": "^5.3.0",
     "typescript": "^4.8.2",
     "validator": "^13.7.0"
   }
