--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "dependencies": {
     "@tsed/multipartfiles": "^5.65.9",
+    "@types/bcrypt": "^5.0.0",
     "@types/color": "^3.0.3",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "@types/validator": "^13.7.7",
+    "bcrypt": "^5.1.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
