--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tsed/multipartfiles": "^5.65.9",
     "@types/bcrypt": "^5.0.0",
     "@types/color": "^3.0.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "@types/validator": "^13.7.7",
@@ -28,6 +29,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "password-validator": "^5.3.0",
     "typescript": "^4.8.2",
