--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "jwt-promisify": "^1.1.5",
     "multer": "^1.4.5-lts.1",
     "password-validator": "^5.3.0",
