--- a/package.json
+++ b/package.json
@@ -23,16 +23,20 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
+    "@types/nodemailer": "^6.4.6",
     "@types/validator": "^13.7.7",
     "bcrypt": "^5.1.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "google-auth-library": "^8.5.2",
+    "googleapis": "^108.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "jwt-promisify": "^1.1.5",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "password-validator": "^5.3.0",
     "typescript": "^4.8.2",
     "validator": "^13.7.0"
