--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "google-auth-library": "^8.5.2",
     "googleapis": "^108.0.0",
